--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -10,30 +10,29 @@ on:
   workflow_dispatch:
 
 jobs:
-  test:
-    if: |
-       github.event_name != 'pull_request' ||
-       (github.event.action == 'labeled' && github.event.label.name == 'run_ci') ||
-       (github.event_name == 'pull_request' && !contains(github.event.pull_request.labels.*.name, 'no_ci'))
-    strategy:
-      matrix:
-        #os: [ubuntu-latest, windows-latest, macos-latest]
-        os: [ubuntu-latest]
-      fail-fast: false
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v3
-      - uses: conda-incubator/setup-miniconda@v2
-        with:
-          python-version: 3.7
-      - name: Install llvm on Macos
-        if: startsWith(matrix.os, 'macos')
-        run: brew install llvm
-      - name: Update pip and install dependencies
-        shell: bash -l {0}
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install -r tests_and_analysis/ci_requirements.txt
+#  test:
+#    if: |
+#       github.event_name != 'pull_request' ||
+#       (github.event.action == 'labeled' && github.event.label.name == 'run_ci') ||
+#       (github.event_name == 'pull_request' && !contains(github.event.pull_request.labels.*.name, 'no_ci'))
+#    strategy:
+#      matrix:
+#        os: [ubuntu-latest, windows-latest, macos-latest]
+#      fail-fast: false
+#    runs-on: ${{ matrix.os }}
+#    steps:
+#      - uses: actions/checkout@v3
+#      - uses: conda-incubator/setup-miniconda@v2
+#        with:
+#          python-version: 3.7
+#      - name: Install llvm on Macos
+#        if: startsWith(matrix.os, 'macos')
+#        run: brew install llvm
+#      - name: Update pip and install dependencies
+#        shell: bash -l {0}
+#        run: |
+#          python -m pip install --upgrade pip
+#          python -m pip install -r tests_and_analysis/ci_requirements.txt
 #      - name: Run tests, skip Python 3.8, 3.9 unless workflow dispatch
 #        if: github.event_name != 'workflow_dispatch'
 #        env:
@@ -50,21 +49,6 @@ jobs:
 #        with:
 #          name: Unit test results ${{ matrix.os }}
 #          path: tests_and_analysis/test/reports/junit_report*.xml
-      - name: Install Euphonic for Sphinx doctests
-        if: startsWith(matrix.os, 'ubuntu')
-        shell: bash -l {0}
-        run: python -m pip install -r doc/requirements.txt numpy .[matplotlib,phonopy_reader]
-      - name: Run Sphinx doctests
-        if: startsWith(matrix.os, 'ubuntu')
-        working-directory: ./doc
-        shell: bash -l {0}
-        run: sphinx-build -c source -b doctest source .
-      - name: Upload doctest results
-        if: startsWith(matrix.os, 'ubuntu') && (success() || failure())
-        uses: actions/upload-artifact@v2
-        with:
-          name: Doctest results
-          path: output.txt
 #      - name: Publish Codacy coverage
 #        uses: codacy/codacy-coverage-reporter-action@v1
 #        if: startsWith(matrix.os, 'ubuntu')
@@ -75,6 +59,32 @@ jobs:
 #        if: startsWith(matrix.os, 'ubuntu')
 #        with:
 #          files: tests_and_analysis/test/reports/coverage*.xml
+
+  test-docs:
+#    needs: test # Ensure it runs in same condition as test
+    runs-on: ubuntu-latest
+    if: success() || failure()
+    steps:
+      - uses: actions/checkout@v3
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          python-version: 3.7
+      - name: Update pip and install dependencies
+        shell: bash -l {0}
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install -r tests_and_analysis/ci_requirements.txt
+          python -m pip install -r doc/requirements.txt numpy .[matplotlib,phonopy_reader]
+      - name: Run Sphinx doctests
+        working-directory: ./doc
+        shell: bash -l {0}
+        run: sphinx-build -c source -b doctest source .
+      - name: Upload doctest results
+        if: success() || failure()
+        uses: actions/upload-artifact@v2
+        with:
+          name: Doctest results
+          path: output.txt
 
 #  publish-test-results:
 #    needs: test
