--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -60,6 +60,31 @@ jobs:
         with:
           files: tests_and_analysis/test/reports/coverage*.xml
 
+  test-docs:
+    runs-on: ubuntu-latest
+    if: success() || failure()
+    steps:
+      - uses: actions/checkout@v3
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          python-version: 3.7
+      - name: Update pip and install dependencies
+        shell: bash -l {0}
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install -r tests_and_analysis/ci_requirements.txt
+          python -m pip install -r doc/requirements.txt numpy .[matplotlib,phonopy_reader]
+      - name: Run Sphinx doctests
+        working-directory: ./doc
+        shell: bash -l {0}
+        run: sphinx-build -c source -b doctest source .
+      - name: Upload docstest results
+        if: success() || failure()
+        uses: actions/upload-artifact@v3
+        with:
+          name: Doctest results
+          path: doc/output.txt
+
   publish-test-results:
     needs: test
     runs-on: ubuntu-latest
