--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -15,12 +15,15 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
-      - uses: conda-incubator/setup-miniconda@v3
         with:
-          python-version: '3.10'
-          channels: conda-forge,defaults
-          channel-priority: true
-      - name: Install llvm on Macos
+          fetch-depth: 0 # Ensure tags are fetched for versioning
+      - uses: actions/setup-python@v5
+        with:
+          python-version: |
+              3.10
+              3.11
+              3.12
+      - name: Install llvm on MacOS
         if: startsWith(matrix.os, 'macos')
         shell: bash -l {0}
         env:
