--- a/build_utils/release_tox.ini
+++ b/build_utils/release_tox.ini
@@ -8,14 +8,15 @@ skipsdist = True
 
 [testenv]
 changedir = tests_and_analysis/test
-test_command = python run_tests.py --report
+test_command = python {toxinidir}/../tests_and_analysis/run_tests.py --report
+requirements_dir = {toxinidir}/../tests_and_analysis
 
 # Test PyPI source distribution
 [testenv:pypisource-{py310,py312}]
 install_command = python -m pip install {opts} {packages}
 deps =
     numpy
-    -r{toxinidir}/tests_and_analysis/tox_requirements.txt
+    -r{[testenv]requirements_dir}/tox_requirements.txt
 commands_pre =
     python -m pip install \
     --force-reinstall \
@@ -28,7 +29,7 @@ commands = {[testenv]test_command}
 install_command = python -m pip install {opts} {packages}
 deps =
     numpy
-    -r{toxinidir}/tests_and_analysis/tox_requirements.txt
+    -r{[testenv]requirements_dir}/tox_requirements.txt
 commands_pre =
     python -m pip install \
     --force-reinstall \
@@ -42,9 +43,9 @@ deps =
     numpy==1.21.3
 commands_pre =
     python -m pip install --force-reinstall \
-        -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
+        -r{[testenv]requirements_dir}/minimum_euphonic_requirements.txt
     python -m pip install --force-reinstall \
-        -r{toxinidir}/tests_and_analysis/tox_requirements.txt
+        -r{[testenv]requirements_dir}/tox_requirements.txt
     python -m pip install \
     'euphonic[matplotlib,phonopy_reader,brille]=={env:EUPHONIC_VERSION}' \
     --only-binary 'euphonic'
@@ -57,7 +58,7 @@ conda_channels =
     conda-forge
     default
 conda_deps =
-    --file={toxinidir}/tests_and_analysis/tox_requirements.txt
+    --file={[testenv]requirements_dir}/tox_requirements.txt
 commands_pre =
     conda install -c conda-forge euphonic={env:EUPHONIC_VERSION} matplotlib-base pyyaml h5py
 # Brille not available on conda
@@ -72,7 +73,7 @@ conda_channels =
     conda-forge
     default
 conda_deps =
-    --file={toxinidir}/tests_and_analysis/tox_requirements.txt
+    --file={[testenv]requirements_dir}/tox_requirements.txt
 commands_pre =
     conda install numpy=1.22
     conda install -c conda-forge euphonic={env:EUPHONIC_VERSION} matplotlib-base pyyaml h5py
