Try simplifying path to run_tests.py
Thanks to changedir we _should_ be in the right place already...

--- a/build_utils/release_tox.ini
+++ b/build_utils/release_tox.ini
@@ -8,7 +8,7 @@ skipsdist = True
 
 [testenv]
 changedir = tests_and_analysis/test
-test_command = python {toxinidir}/../tests_and_analysis/test/run_tests.py --report
+test_command = python run_tests.py --report
 requirements_dir = {toxinidir}/../tests_and_analysis
 
 # Test PyPI source distribution
