Set up spglib, environment variables for test_release source builds
Source builds are allowed a little help finding dependencies via
standard compiler environment variables

Try also pre-installing spglib from wheel; this can be a nuisance to
build from source but that isn't our problem.

--- a/build_utils/release_tox.ini
+++ b/build_utils/release_tox.ini
@@ -13,9 +13,11 @@ requirements_dir = {toxinidir}/../tests_and_analysis
 
 # Test PyPI source distribution
 [testenv:pypisource-{py310,py312}]
+passenv = CC CC_LD LDFLAGS CPPFLAGS
 install_command = python -m pip install {opts} {packages}
 deps =
     numpy
+    spglib  # Not interested here in whether source builds of spglib work
     -r{[testenv]requirements_dir}/tox_requirements.txt
 commands_pre =
     python -m pip install \
