Setup mac minrequirements file and test

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 # The python environments to run the tests in
-envlist = py310,py311,py312,py310-{base,matplotlib,phonopy_reader,brille,all},py310-minrequirements-linux
+envlist = py310,py311,py312,py310-{base,matplotlib,phonopy_reader,brille,all},py310-minrequirements-{mac,linux}
 # Skip the execution of setup.py as we do it with the correct arg in commands_pre below
 skipsdist = True
 whitelist_externals = git
@@ -97,6 +97,25 @@ deps =
 commands_pre =
     python -m pip install --force-reinstall \
         -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
+    python -m pip install --force-reinstall \
+        -r{toxinidir}/tests_and_analysis/tox_requirements.txt
+    # Force rebuild of euphonic extension to avoid Numpy clash
+    rm -rf {toxinidir}/build
+    python -m pip install '{toxinidir}[matplotlib,phonopy_reader,brille]'
+commands = {[testenv]test_command}
+
+[testenv:py310-minrequirements-mac]
+whitelist_externals = rm
+install_command =
+    python -m pip install --force-reinstall {opts} {packages}
+platform =
+    macos: darwin
+deps =
+    numpy==1.24.0
+    {[testenv:py310]deps}
+commands_pre =
+    python -m pip install --force-reinstall \
+        -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements_mac.txt
     python -m pip install --force-reinstall \
         -r{toxinidir}/tests_and_analysis/tox_requirements.txt
     # Force rebuild of euphonic extension to avoid Numpy clash
