--- a/build_utils/release_tox.ini
+++ b/build_utils/release_tox.ini
@@ -39,13 +39,32 @@ commands_pre =
     --only-binary 'euphonic'
 commands = {[testenv]test_command}
 
-[testenv:pypi-py310-min]
+[testenv:pypi-py310-min-win-linux]
 install_command = python -m pip install --force-reinstall {opts} {packages}
+platform =
+    linux: linux
+    windows: win32
 deps =
     numpy==1.24.0
 commands_pre =
     python -m pip install --force-reinstall \
         -r{[testenv]requirements_dir}/minimum_euphonic_requirements.txt
+    python -m pip install --force-reinstall \
+        -r{[testenv]requirements_dir}/tox_requirements.txt
+    python -m pip install \
+    'euphonic[matplotlib,phonopy_reader,brille]=={env:EUPHONIC_VERSION}' \
+    --only-binary 'euphonic'
+commands = {[testenv]test_command}
+
+[testenv:pypi-py310-min-mac]
+install_command = python -m pip install --force-reinstall {opts} {packages}
+platform =
+    mac: darwin
+deps =
+    numpy==1.24.0
+commands_pre =
+    python -m pip install --force-reinstall \
+        -r{[testenv]requirements_dir}/minimum_euphonic_requirements_mac.txt
     python -m pip install --force-reinstall \
         -r{[testenv]requirements_dir}/tox_requirements.txt
     python -m pip install \
