--- a/.github/workflows/test_windows_sdist.yml
+++ b/.github/workflows/test_windows_sdist.yml
@@ -12,6 +12,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Ensure tags are fetched for versioning
+
       - name: Setup Python 3.11
         uses: actions/setup-python@v5
         with:
@@ -38,13 +39,14 @@ jobs:
     name: Install on Windows
     runs-on: windows-latest
     steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # Ensure tags are fetched for versioning
+
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: |
-              3.10
-              3.11
-              3.12
+          python-version: 3.11
 
       - name: Find MSVC and set environment variables
         shell: bash -l {0}
@@ -74,11 +76,36 @@ jobs:
           pwd
           ls -R
 
-      - name: Update pip
+      - name: Update pip and install test requirements
         shell: bash -l {0}
         run: |
           python -m pip install --upgrade pip
+          python -m pip install -r tests_and_analysis/tox_requirements.txt
 
       - name: Install from sdist
         shell: bash -l {0}
-        run: python -m pip install $(find . -name 'euphonic-*.tar.gz')
+        run: python -m pip install $(find dist -name 'euphonic-*.tar.gz')
+
+      - name: run tests
+        shell: bash -l {0}
+        run: python tests_and_analysis/test/run_tests.py --report
+
+      - name: Upload test results
+        uses: actions/upload-artifact@v4
+        with:
+          name: Unit test results (Windows from sdist)
+          path: tests_and_analysis/test/reports/junit_report*.xml
+
+  publish-test-results:
+    needs: test
+    runs-on: ubuntu-latest
+    if: success() || failure()
+    steps:
+      - name: Download Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
+      - name: Publish test results
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        with:
+          junit_files: artifacts/**/junit_report*.xml
