--- a/.github/workflows/test_windows_sdist.yml
+++ b/.github/workflows/test_windows_sdist.yml
@@ -84,7 +84,7 @@ jobs:
 
       - name: Install from sdist
         shell: bash -l {0}
-        run: python -m pip install $(find dist -name 'euphonic-*.tar.gz')
+        run: python -m pip install $(find dist -name 'euphonic-*.tar.gz')[matplotlib,phonopy_reader,brille]
 
       - name: run tests
         shell: bash -l {0}
