--- a/.github/workflows/build_upload_pypi_wheels.yml
+++ b/.github/workflows/build_upload_pypi_wheels.yml
@@ -6,7 +6,29 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-sdist:
+    name: Build sdist
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # Ensure tags are fetched for versioning
+
+      - name: Create source distribution
+        shell: bash -l {0}
+        run: |
+          pipx run build --sdist .
+
+      - name: Upload source dist as build artifact
+        uses: actions/upload-artifact@v4
+        with:
+            name: python-source-distribution
+            path: dist/
+            if-no-files-found: error
+
+  build-wheels:
+    needs: build-sdist
     strategy:
       matrix:
         os: [windows-latest, macos-13, macos-latest, ubuntu-latest]
@@ -36,10 +58,17 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Ensure tags are fetched for versioning
+
+      - name: Download sdist
+        uses: actions/download-artifact@v4
+        with:
+          path: dist/
+
       - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+
       - name: Install llvm on Macos
         if: startsWith(matrix.os, 'macos')
         shell: bash -l {0}
@@ -75,7 +104,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip build wheel twine
 
-      - name: Build wheels
+      - name: Build wheels from sdist
         uses: pypa/cibuildwheel@v2.21.3
         env:
           CIBW_BUILD_FRONTEND: build
@@ -90,19 +119,7 @@ jobs:
 
         with:
           output-dir: wheelhouse
-
-      - name: Create source distribution
-        if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.11'
-        shell: bash -l {0}
-        run: |
-          python -m build --sdist .
-
-      - name: Upload source dist as build artifact
-        if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.11' && github.event_name == 'release'
-        uses: actions/upload-artifact@v4
-        with:
-            name: python-source-distribution
-            path: dist
+          package-dir: dist/*.tar.gz
 
       - name: Upload wheels as build artifacts
         uses: actions/upload-artifact@v4
@@ -111,9 +128,63 @@ jobs:
             path: wheelhouse/*-${{ matrix.wheelname }}*_${{ matrix.cibw_archs }}.whl
             if-no-files-found: error
 
+  test-sdist:
+    needs: build-sdist
+    name: Test build from sdist on Windows
+    runs-on: windows-latest
+    steps:
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.11
+
+      - name: Find MSVC and set environment variables
+        shell: bash -l {0}
+        env:
+          MSVC_PREFIX: 'C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Tools\MSVC'
+        run: |
+          echo "Available MSVC installations:"
+          ls "$MSVC_PREFIX"
+
+          MSVC_BIN=$(ls "$MSVC_PREFIX" | tail -n 1)\\bin\\HostX64\\x64
+          CC="$MSVC_PREFIX\\$MSVC_BIN\\cl.exe"
+          echo "CC: $CC"
+          echo "CC=$CC" >> $GITHUB_ENV
+
+          CC_LD="$MSVC_PREFIX\\$MSVC_BIN\\link.exe"
+          echo "CC_LD: $CC_LD"
+          echo "CC_LD=$CC_LD" >> $GITHUB_ENV
+
+      - name: Download sdist
+        uses: actions/download-artifact@v4
+        with:
+          path: dist/
+          merge-multiple: true
+
+      - name: List downloaded sdist
+        run: |
+          ls -R dist/
+
+      - name: Update pip
+        shell: bash -l {0}
+        run: |
+          python -m pip install --upgrade pip
+
+      - name: Install from sdist
+        shell: bash -l {0}
+        run: python -m pip install $(find dist -name 'euphonic-*.tar.gz')[matplotlib,phonopy_reader,brille,test]
+
+      - name: Checkout repository (for tests and test data)
+        uses: actions/checkout@v4
+
+      - name: run tests
+        shell: bash -l {0}
+        run: python tests_and_analysis/test/run_tests.py --report
+
+
   publish:
     if: github.event_name == 'release'
-    needs: build
+    needs: [build-wheels,test-sdist]
     name: Upload release to PyPI
     runs-on: ubuntu-latest
     environment:
