--- a/.github/workflows/build_upload_pypi_wheels.yml
+++ b/.github/workflows/build_upload_pypi_wheels.yml
@@ -55,14 +55,21 @@ jobs:
       fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0 # Ensure tags are fetched for versioning
-
       - name: Download sdist
         uses: actions/download-artifact@v4
         with:
           path: dist/
+
+      - name: Rename dowloaded sdist
+        shell: bash -l {0}
+        run: |
+          ls -R dist
+          mv $(find dist/ -name 'euphonic*.tar.gz') dist/euphonic.tar.gz
+          ls -R dist
+
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # Ensure tags are fetched for versioning
 
       - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
@@ -119,7 +126,7 @@ jobs:
 
         with:
           output-dir: wheelhouse
-          package-dir: dist/*.tar.gz
+          package-dir: "dist/euphonic.tar.gz"
 
       - name: Upload wheels as build artifacts
         uses: actions/upload-artifact@v4
