Update .gitattributes: exclude tests and workflows from archive
meson-python uses git-archive to create the sdist. Some of euphonic's
test files are on the large side and we don't need to include them
with every copy of the source.

This does have the downside that git-archive can no longer be used
to produce a copy of the source with tests, but we weren't using that
anyway.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-# Added by versioneer
-euphonic/_version.py export-subst
+.github/** export-ignore
+tests_and_analysis/** export-ignore
+tox.ini export-ignore
