Run wheel tests from main project directory

--- a/.github/workflows/build_upload_pypi_wheels.yml
+++ b/.github/workflows/build_upload_pypi_wheels.yml
@@ -124,7 +124,7 @@ jobs:
           CIBW_REPAIR_WHEEL_COMMAND_MACOS: ""
 
           CIBW_TEST_EXTRAS: "test,brille,phonopy_reader,matplotlib"
-          CIBW_TEST_COMMAND: python {package}/tests_and_analysis/test/run_tests.py
+          CIBW_TEST_COMMAND: python ${{ github.workspace }}/tests_and_analysis/test/run_tests.py
 
         with:
           output-dir: wheelhouse
