--- a/.github/workflows/build_upload_pypi_wheels.yml
+++ b/.github/workflows/build_upload_pypi_wheels.yml
@@ -57,10 +57,12 @@ jobs:
     steps:
       - name: Checkout project (for test files)
         uses: actions/checkout@v4
+        with:
+          path: euphonic_from_git
 
       - name: Delete source (to ensure we are using sdist only)
         shell: bash -l {0}
-        run: rm -rf euphonic
+        run: rm -rf euphonic_from_git/euphonic
 
       - name: Download sdist
         uses: actions/download-artifact@v4
@@ -113,6 +115,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip build wheel twine
 
+      - name: List contents of GITHUB_WORKSPACE
+        shell: bash -l {0}
+        run: ls -R ${GITHUB_WORKSPACE}
+
       - name: Build wheels from sdist
         uses: pypa/cibuildwheel@v2.21.3
         env:
@@ -124,7 +130,7 @@ jobs:
           CIBW_REPAIR_WHEEL_COMMAND_MACOS: ""
 
           CIBW_TEST_EXTRAS: "test,brille,phonopy_reader,matplotlib"
-          CIBW_TEST_COMMAND: python ${{ github.workspace }}/tests_and_analysis/test/run_tests.py
+          CIBW_TEST_COMMAND: python ${{ github.workspace }}/euphonic_from_git/tests_and_analysis/test/run_tests.py
 
         with:
           output-dir: wheelhouse
