--- a/.github/workflows/build_upload_pypi_wheels.yml
+++ b/.github/workflows/build_upload_pypi_wheels.yml
@@ -115,10 +115,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip build wheel twine
 
-      - name: List contents of GITHUB_WORKSPACE
-        shell: bash -l {0}
-        run: ls -R ${GITHUB_WORKSPACE}
-
       - name: Build wheels from sdist
         uses: pypa/cibuildwheel@v2.21.3
         env:
@@ -130,7 +126,7 @@ jobs:
           CIBW_REPAIR_WHEEL_COMMAND_MACOS: ""
 
           CIBW_TEST_EXTRAS: "test,brille,phonopy_reader,matplotlib"
-          CIBW_TEST_COMMAND: python ${{ github.workspace }}/euphonic_from_git/tests_and_analysis/test/run_tests.py
+          CIBW_TEST_COMMAND: python {project}/euphonic_from_git/tests_and_analysis/test/run_tests.py
 
         with:
           output-dir: wheelhouse
